Most functionality complete.

--- a/destination.html
+++ b/destination.html
@@ -20,9 +20,10 @@
         <link rel="stylesheet" href="index.css" />
         <title>Frontend Mentor | Space tourism website</title>
 
-        <script src="index.js" defer></script>
+        <script src="navigation.js" defer></script>
+        <script src="tabs.js" defer></script>
     </head>
-    <body class="moon">
+    <body class="moon balance">
         <a class="skip-to-content" href="#main">Skip to content</a>
         <header class="primary-header flex items-center justify-between">
             <div>
@@ -43,22 +44,24 @@
                     data-visible="false"
                     class="underline-indicators primary-navigation flex">
                     <li
-                        class="uppercase active letter-spacing-md text-white ff-sans-cond">
+                        class="uppercase letter-spacing-md text-white ff-sans-cond">
                         <a href="/"><span aria-hidden="true">00</span>Home</a>
                     </li>
                     <li
-                        class="uppercase letter-spacing-md text-white ff-sans-cond">
-                        <a href="#"
+                        class="uppercase active letter-spacing-md text-white ff-sans-cond">
+                        <a href="/destination.html"
                             ><span aria-hidden="true">01</span>destination</a
                         >
                     </li>
                     <li
                         class="uppercase letter-spacing-md text-white ff-sans-cond">
-                        <a href="#"><span aria-hidden="true">02</span>crew</a>
+                        <a href="/crew.html"
+                            ><span aria-hidden="true">02</span>crew</a
+                        >
                     </li>
                     <li
                         class="uppercase letter-spacing-md text-white ff-sans-cond">
-                        <a href="" #
+                        <a href="/technology.html" #
                             ><span aria-hidden="true">03</span>technology</a
                         >
                     </li>
@@ -68,41 +71,89 @@
 
         <main
             id="main"
-            style="--flow-space: 2rem"
             class="grid-container grid-container--destination text-white flow">
             <h1 class="numbered-title">
                 <span aria-hidden="true">01</span> Pick your destination
             </h1>
 
-            <picture
-                ><img src="assets/destination/image-moon.png" alt="the moon"
-            /></picture>
+            <picture id="moon-image">
+                <source
+                    srcset="assets/destination/image-moon.webp"
+                    type="image/webp" />
+                <img
+                    src="assets/destination/image-moon.png"
+                    alt="Earth's moon" />
+            </picture>
+            <picture hidden id="mars-image">
+                <source
+                    srcset="assets/destination/image-mars.webp"
+                    type="image/webp" />
+                <img
+                    src="assets/destination/image-mars.png"
+                    alt="the planet mars" />
+            </picture>
+            <picture hidden id="europa-image">
+                <source
+                    srcset="assets/destination/image-europa.webp"
+                    type="image/webp" />
+                <img
+                    src="assets/destination/image-europa.png"
+                    alt="the planet europa" />
+            </picture>
+            <picture hidden id="titan-image">
+                <source
+                    srcset="assets/destination/image-titan.webp"
+                    type="image/webp" />
+                <img
+                    src="assets/destination/image-titan.png"
+                    alt="the moon titan" />
+            </picture>
 
             <!-- Tabs -->
-            <div class="tab-list underline-indicators flex">
+            <div class="tab-list underline-indicators flex" role="tablist">
                 <button
                     aria-selected="true"
-                    class="active bg-dark text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer">
+                    role="tab"
+                    aria-controls="moon-tab"
+                    tabindex="0"
+                    class="text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer"
+                    data-image="moon-image">
                     Moon
                 </button>
                 <button
                     aria-selected="false"
-                    class="bg-dark text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer">
+                    role="tab"
+                    aria-controls="mars-tab"
+                    tabindex="-1"
+                    class="text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer"
+                    data-image="mars-image">
                     Mars
                 </button>
                 <button
                     aria-selected="false"
-                    class="bg-dark text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer">
+                    role="tab"
+                    aria-controls="europa-tab"
+                    tabindex="-1"
+                    class="text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer"
+                    data-image="europa-image">
                     Europa
                 </button>
                 <button
                     aria-selected="false"
-                    class="bg-dark text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer">
+                    role="tab"
+                    aria-controls="titan-tab"
+                    tabindex="-1"
+                    class="text-accent ff-sans-cond letter-spacing-md uppercase cursor-pointer"
+                    data-image="titan-image">
                     Titan
                 </button>
             </div>
-
-            <article class="destination-info flow" style="--flow-space: 2rem">
+            <!-- The moon -->
+            <article
+                class="destination-info flow"
+                id="moon-tab"
+                tabindex="0"
+                role="tabpanel">
                 <h2 class="fs-800 ff-serif uppercase">Moon</h2>
                 <p class="text-accent">
                     See our planet as you’ve never seen it before. A perfect
@@ -122,6 +173,92 @@
                             Est. travel time
                         </h3>
                         <p class="ff-serif uppercase">3 days</p>
+                    </div>
+                </div>
+            </article>
+            <!-- Mars -->
+            <article
+                class="destination-info flow"
+                hidden
+                id="mars-tab"
+                tabindex="0"
+                role="tabpanel">
+                <h2 class="fs-800 ff-serif uppercase">Mars</h2>
+                <p class="text-accent">
+                    Don’t forget to pack your hiking boots. You’ll need them to
+                    tackle Olympus Mons, the tallest planetary mountain in our
+                    solar system. It’s two and a half times the size of Everest!
+                </p>
+                <div class="destination-meta flex">
+                    <div>
+                        <h3 class="text-accent fs-200 uppercase">
+                            Avg. distance
+                        </h3>
+                        <p class="ff-serif uppercase">225 mil. km</p>
+                    </div>
+                    <div>
+                        <h3 class="text-accent fs-200 uppercase">
+                            Est. travel time
+                        </h3>
+                        <p class="ff-serif uppercase">9 months</p>
+                    </div>
+                </div>
+            </article>
+            <!-- Europa -->
+            <article
+                class="destination-info flow"
+                hidden
+                id="europa-tab"
+                tabindex="0"
+                role="tabpanel">
+                <h2 class="fs-800 ff-serif uppercase">Europa</h2>
+                <p class="text-accent">
+                    The smallest of the four Galilean moons orbiting Jupiter,
+                    Europa is a winter lover’s dream. With an icy surface, it’s
+                    perfect for a bit of ice skating, curling, hockey, or simple
+                    relaxation in your snug wintery cabin.
+                </p>
+                <div class="destination-meta flex">
+                    <div>
+                        <h3 class="text-accent fs-200 uppercase">
+                            Avg. distance
+                        </h3>
+                        <p class="ff-serif uppercase">628 mil. km</p>
+                    </div>
+                    <div>
+                        <h3 class="text-accent fs-200 uppercase">
+                            Est. travel time
+                        </h3>
+                        <p class="ff-serif uppercase">3 years</p>
+                    </div>
+                </div>
+            </article>
+            <!-- Titan -->
+            <article
+                class="destination-info flow"
+                hidden
+                id="titan-tab"
+                tabindex="0"
+                role="tabpanel">
+                <h2 class="fs-800 ff-serif uppercase">Titan</h2>
+                <p class="text-accent">
+                    The only moon known to have a dense atmosphere other than
+                    Earth, Titan is a home away from home (just a few hundred
+                    degrees colder!). As a bonus, you get striking views of the
+                    Rings of Saturn.
+                </p>
+                <div class="destination-meta flex">
+                    <div>
+                        <h3 class="text-accent fs-200 uppercase">
+                            Avg. distance
+                        </h3>
+                        <p class="ff-serif uppercase">1.6 bil. km</p>
+                    </div>
+                    <div>
+                        <h3 class="text-accent fs-200 uppercase">
+                            Est. travel time
+                        </h3>
+                        <p class="ff-serif uppercase">7 years</p>
                     </div>
                 </div>
             </article>
