--- a/technology.html
+++ b/technology.html
@@ -20,9 +20,9 @@
         <link rel="stylesheet" href="index.css" />
         <title>Frontend Mentor | Space tourism website</title>
 
-        <script src="navigation.js" defer></script>
+        <script src="index.js" defer></script>
     </head>
-    <body class="home">
+    <body class="tech">
         <a class="skip-to-content" href="#main">Skip to content</a>
         <header class="primary-header flex items-center justify-between">
             <div>
@@ -43,7 +43,7 @@
                     data-visible="false"
                     class="underline-indicators primary-navigation flex">
                     <li
-                        class="uppercase active letter-spacing-md text-white ff-sans-cond">
+                        class="uppercase letter-spacing-md text-white ff-sans-cond">
                         <a href="/"><span aria-hidden="true">00</span>Home</a>
                     </li>
                     <li
@@ -59,7 +59,7 @@
                         >
                     </li>
                     <li
-                        class="uppercase letter-spacing-md text-white ff-sans-cond">
+                        class="uppercase active letter-spacing-md text-white ff-sans-cond">
                         <a href="/technology.html" #
                             ><span aria-hidden="true">03</span>technology</a
                         >
@@ -67,31 +67,5 @@
                 </ul>
             </nav>
         </header>
-
-        <main id="main" class="grid-container grid-container--home">
-            <div class="balance">
-                <h1
-                    class="text-accent ff-sans-cond uppercase letter-spacing-lg fs-500">
-                    So, you want to travel to
-                    <span class="fs-900 ff-serif text-white block big-word"
-                        >Space</span
-                    >
-                </h1>
-                <p class="text-accent fs-400" style="line-height: 32px">
-                    Let’s face it; if you want to go to space, you might as well
-                    genuinely go to outer space and not hover kind of on the
-                    edge of it. Well sit back, and relax because we’ll give you
-                    a truly out of this world experience!
-                </p>
-            </div>
-
-            <div>
-                <a
-                    class="large-button uppercase bg-white rounded-full ff-serif text-dark"
-                    href="/destination.html"
-                    >Explore</a
-                >
-            </div>
-        </main>
     </body>
 </html>
