finished, could still fix animations to be smoother. also, would like to add additional page for Booking

--- a/crew.html
+++ b/crew.html
@@ -83,7 +83,7 @@
             <div class="dot-indicators flex" role="tablist">
                 <button
                     aria-selected="true"
-                    class="active cursor-pointer"
+                    class=" cursor-pointer"
                     role="tab"
                     aria-controls="commander-tab"
                     data-image="commander-image"
@@ -148,7 +148,7 @@
 
             <!-- Specialist -->
             <article
-                class="crew-details balance"
+                class="crew-details flow balance"
                 hidden
                 role="tabpanel"
                 tabindex="0"
