--- a/destination.html
+++ b/destination.html
@@ -84,7 +84,7 @@
                     src="assets/destination/image-moon.png"
                     alt="Earth's moon" />
             </picture>
-            <picture hidden id="mars-image">
+            <picture hidden id="mars-image" >
                 <source
                     srcset="assets/destination/image-mars.webp"
                     type="image/webp" />
@@ -92,7 +92,7 @@
                     src="assets/destination/image-mars.png"
                     alt="the planet mars" />
             </picture>
-            <picture hidden id="europa-image">
+            <picture hidden id="europa-image" >
                 <source
                     srcset="assets/destination/image-europa.webp"
                     type="image/webp" />
@@ -100,7 +100,7 @@
                     src="assets/destination/image-europa.png"
                     alt="the planet europa" />
             </picture>
-            <picture hidden id="titan-image">
+            <picture hidden id="titan-image" >
                 <source
                     srcset="assets/destination/image-titan.webp"
                     type="image/webp" />
@@ -263,5 +263,13 @@
                 </div>
             </article>
         </main>
+        <div class="footer text-accent numbered-title flex">
+            <a href="/crew.html" class="first cursor-pointer"
+                ><span>02</span>Meet the crew</a
+            >
+            <a href="/technology.html" class="cursor-pointer"
+                ><span>03</span>See the tech</a
+            >
+        </div>
     </body>
 </html>
