--- a/technology.html
+++ b/technology.html
@@ -20,7 +20,8 @@
         <link rel="stylesheet" href="index.css" />
         <title>Frontend Mentor | Space tourism website</title>
 
-        <script src="index.js" defer></script>
+        <script src="navigation.js" defer></script>
+        <script src="tabs.js" defer></script>
     </head>
     <body class="tech">
         <a class="skip-to-content" href="#main">Skip to content</a>
@@ -58,7 +59,7 @@
                             ><span aria-hidden="true">02</span>crew</a
                         >
                     </li>
-                    <li 
+                    <li
                         class="uppercase active letter-spacing-md text-white ff-sans-cond">
                         <a href="/technology.html" #
                             ><span aria-hidden="true">03</span>technology</a
@@ -67,5 +68,147 @@
                 </ul>
             </nav>
         </header>
+        <main id="main" class="grid-container grid-container--tech text-white flow">
+            <h1 class="numbered-title">
+                <span aria-hidden="true">03</span>
+                Space launch 101
+            </h1>
+
+            <picture id="launch-image">
+                <source
+                    srcset="assets/technology/image-launch-vehicle-portrait.jpg"
+                    media="(min-width: 45rem)"
+                    type="image/jpg" />
+                <img
+                    src="assets/technology/image-launch-vehicle-landscape.jpg"
+                    alt="rocket launch image" />
+            </picture>
+            <picture id="spaceport-image" hidden>
+                <source
+                    srcset="assets/technology/image-spaceport-portrait.jpg"
+                    media="(min-width: 45rem)"
+                    type="image/jpg" />
+                <img
+                    src="assets/technology/image-spaceport-landscape.jpg"
+                    alt="distant image of spaceport" />
+            </picture>
+            <picture id="capsule-image" hidden>
+                <source
+                    srcset="assets/technology/image-space-capsule-portrait.jpg"
+                    media="(min-width: 45rem)"
+                    type="image/jpg" />
+                <img
+                    src="assets/technology/image-space-capsule-landscape.jpg"
+                    alt="space capsule in orbit" />
+            </picture>
+
+            <!-- Numbers -->
+
+            <div class="number-indicators flex" role="tablist">
+                <button
+                    aria-selected="true"
+                    class="cursor-pointer ff-serif grid"
+                    role="tab"
+                    aria-controls="launch-tab"
+                    tabindex="-1"
+                    data-image="launch-image">
+                    1
+                </button>
+                <button
+                    aria-selected="false"
+                    class="cursor-pointer grid ff-serif"
+                    role="tab"
+                    aria-controls="spaceport-tab"
+                    tabindex="-1"
+                    data-image="spaceport-image">
+                    2
+                </button>
+                <button
+                    aria-selected="false"
+                    class="cursor-pointer grid ff-serif"
+                    role="tab"
+                    aria-controls="capsule-tab"
+                    tabindex="-1"
+                    data-image="capsule-image">
+                    3
+                </button>
+            </div>
+
+            <article
+                class="tech-info flow balance"
+                id="launch-tab"
+                tabindex="0"
+                role="tabpanel">
+                <header class="flow flow--space-small ">
+                    <h2
+                        class="fs-600 uppercase text-accent fs-400 ff-sans-cond letter-spacing-md">
+                        the terminology...
+                    </h2>
+                    <p
+                        class="fs-700 uppercase ff-serif special letter-spacing-md">
+                        Launch vehicle
+                    </p>
+                </header>
+                <p class="text-accent balance tech-details">
+                    A launch vehicle or carrier rocket is a rocket-propelled
+                    vehicle used to carry a payload from Earth's surface to
+                    space, usually to Earth orbit or beyond. Our WEB-X carrier
+                    rocket is the most powerful in operation. Standing 150
+                    metres tall, it's quite an awe-inspiring sight on the launch
+                    pad!
+                </p>
+            </article>
+            <article
+                class="tech-info flow balance"
+                hidden
+                id="spaceport-tab"
+                tabindex="0"
+                role="tabpanel">
+                <header class="flow flow--space-small">
+                    <h2
+                        class="fs-600 uppercase text-accent fs-400 ff-sans-cond letter-spacing-md">
+                        the terminology...
+                    </h2>
+                    <p
+                        class="fs-700 uppercase ff-serif special letter-spacing-md">
+                        SPACEPORT
+                    </p>
+                </header>
+                <p class="text-accent balance tech-details">
+                    A spaceport or cosmodrome is a site for launching (or
+                    receiving) spacecraft, by analogy to the seaport for ships
+                    or airport for aircraft. Based in the famous Cape Canaveral,
+                    our spaceport is ideally situated to take advantage of the
+                    Earth’s rotation for launch.
+                </p>
+            </article>
+            <article
+                class="tech-info flow balance"
+                hidden
+                id="capsule-tab"
+                tabindex="0"
+                role="tabpanel">
+                <header class="flow flow--space-small">
+                    <h2
+                        class="fs-600 uppercase text-accent fs-400 ff-sans-cond letter-spacing-md">
+                        the terminology...
+                    </h2>
+                    <p
+                        class="fs-700 uppercase ff-serif special letter-spacing-md">
+                        Space capsule
+                    </p>
+                </header>
+                <p class="text-accent balance tech-details">
+                    A space capsule is an often-crewed spacecraft that uses a
+                    blunt-body reentry capsule to reenter the Earth's atmosphere
+                    without wings. Our capsule is where you'll spend your time
+                    during the flight. It includes a space gym, cinema, and
+                    plenty of other activities to keep you entertained.
+                </p>
+            </article>
+        </main>
+        <div class="footer text-accent numbered-title flex">
+            <a href="#"><span>04</span>Start your journey today</a>
+        </div>
     </body>
 </html>
